--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta
+      name="google-signin-client_id"
+      content="605400824395-icautk76buu8sa19a1a05cvhi7tqidqq.apps.googleusercontent.com" />
     <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
